# simpi

./: .gitattributes  .gitignore  README.md  clenv.bat  install.bat  install.sh  uninstall.bat  uninstall.sh
.build/: build.sh  build_guide.md
.build/linux_data/: install.sh
.build/windows_data/: install.bat
broker/: Cargo.toml
broker/config/: gpiotest-board.json  help.json  prefs_config.json
broker/hardware/: gpiotest-board.json
broker/media/: app_icon.xcf
broker/src/: main.rs  style_old.rs
broker/src/app/: board_manager.rs  help.rs  mod.rs
broker/src/hardware/: board.rs  button.rs  led.rs  mod.rs  part.rs
docs/schemas/: board.json  button.json  led.json
simpi_broker/: README.md  make.bat  makefile
simpi_broker/doc/: simpi_req_response.md
simpi_broker/lib/: Broker.cpp  Broker.hpp  GpioRegister.cpp  GpioRegister.hpp
simpi_broker/src/: main.cpp
simpi_broker/www/: index.html
simpi_broker/www/data/: prefs.json
simpi_broker/www/scripts/: SimPi.js  ThemeManager.js  gpioregs.js  main.js  preferences.js  simpi_main.js
simpi_broker/www/styles/: gpioregs.css  preferences.css  simpi-dark.css  simpi.css
simpi_wiringpi/: README.md  make.bat  makefile
simpi_wiringpi/lib/: gpioregs.h  lsim.h  old_wiringPi.h  wiringPi.c
simpi_wiringpi/test/: blinky.c  check_buttons.c
utils/: Cargo.toml
utils/src/: gpioregs.rs  lib.rs  log.rs
wpisim/: Cargo.toml  README.md
wpisim-test/: make.bat  makefile
wpisim-test/test/: check_buttons.c
wpisim/src/: gpioregs.rs  lib.rs  lsim.rs
wpisim/test/: make.bat  makefile
wpisim/test/test/: running-light.c
(+1 files in other folders)
