[package]
name = "simpi_broker"
version = "0.2.0"
authors = ["Patrick Goldinger"]
edition = "2018"

[dependencies]
clap = "2.33.0"
failure = "0.1.6"
crossterm = "0.14.2"
serde_json = "1.0.44"
tui = { version = "0.8.0", default-features = false, features = ['crossterm'] }
utils = { path = "../utils" }
